Pseudocode for what I need to do

--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
+    <link rel= "stylesheet" type="text/css" href ="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
 </head>
 <body>
 <title>Document</title>
 
+<!--1) Header w/ High Score and time remaining
+    2) container
+        a) buttons w/ onclick events
+        b) text area displaying the question
+        c)
+    3) Footer
+
+ -->
     
 </body>
 </html>
