--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </div>
 <div class = "controls">
             <button type="button"  class="btn btn-warning btn-lg" id="btn-start" onclick="startQuiz()">Start Quiz </button>
-            <button type="button" class="btn btn-warning btn-viewhighscore btn-lg" onclick="viewHighScore()">View HighScores</button>
+            <!-- <button type="button" class="btn btn-warning btn-viewhighscore btn-lg" onclick="viewScore()">View HighScores</button> -->
 </div>
      <div class="answer-result"> </div>
 <!--1) Header w/ High Score and time remaining
